# real-time-retail-feedback-intelligence

./: .env.example  ORIG_Full Code.ipynb  Prompt-01.md  README.md  Real_Time_Retail_Feedback_Intelligence_Full_code.html  Real_Time_Retail_Feedback_Intelligence_Full_code.ipynb  Real_Time_Retail_Feedback_Intelligence_Low_code.ipynb  main.py  pyproject.toml
